# edx-lint

./: .coveragerc  .editorconfig  .gitignore  .travis.yml  AUTHORS  CHANGELOG.rst  CONTRIBUTING.rst  MANIFEST.in  Makefile  README.rst  catalog-info.yaml  commitlint.config.js  dev-requirements.txt  openedx.yaml  pylintrc  pylintrc_tweaks  requirements.txt  setup.cfg  setup.py  tox.ini
.github/:  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  commitlint.yml  pypi-publish.yml  upgrade-python-requirements.yml
docs/decisions/: 0001-adding-new-checks.rst
docs/how_tos/: adding-new-checks.rst  communicate-new-checks.rst
edx_lint/: __init__.py  __main__.py  check.py  configfile.py  list.py  main.py  metadata.py  tamper_evident.py  write.py
edx_lint/cmd/: amnesty.py  check.py  list.py  main.py  update.py  write.py  write_uv_constraints.py
edx_lint/files/: .commitlintrc.yml  .editorconfig  commitlint.config.js  common_constraints.txt  just_for_testing.txt  pylintrc  resolve-common-constraints.sh
edx_lint/pylint/: __init__.py  _pii_common.py  annotations_check.py  checkers.py  common.py  cross_monolith_import_check.py  feature_toggle_check.py  getattr_check.py  i18n_check.py  layered_test_check.py  module_trace.py  pii_annotation_check.py  pii_squelch_check.py  plugin.py  range_check.py  required_base_class.py  right_assert_check.py  super_check.py  unicode_check.py  yaml_load_check.py
edx_lint/pylint/events_annotation/: __init__.py  events_annotation_check.py
edx_lint/pylint/filters_docstring/: __init__.py  filters_docstring_check.py
edx_lint/pylint/unittest_assert/: __init__.py  unittest_assert_check.py
github-actions/commit-lint/: action.yml
requirements/: base.in  base.txt  ci.txt  constraints.txt  dev.in  dev.txt  django52.txt  pip-tools.txt  pip.txt  test.in  test.txt
test/: test_amnesty.py  test_cmd.py  test_func.py  test_plugin_range_check.py  test_pylint_plugins.py  test_required_base_class.py  test_tamper_evident.py  utils.py
test/input/: func_asserts_check.py  func_getattr_literals.py  func_i18n_computed_strings.py  func_layered_tests.py  func_no_super_setup_call.py  func_noerror_hello_world.py  func_noerror_ok_i18n.py  func_noerror_range.py  func_noerror_super_setup.py  func_range.py
test/messages/: func_asserts_check.txt  func_getattr_literals.txt  func_i18n_computed_strings.txt  func_layered_tests.txt  func_no_super_setup_call.txt  func_range.txt
test/plugins/: conftest.py  pylint_test.py  test_annotations_check.py  test_common.py  test_feature_toggle_check.py  test_getattr_check.py  test_i18n_check.py  test_ignore_long_lines.py  test_layered_test_check.py  test_pii_annotation_check.py  test_pii_squelch_check.py  test_range_check.py  test_required_base_class.py  test_right_assert_check.py  test_super_check.py  test_unicode_check.py  test_unittest_assert_check.py  test_yaml_load_check.py
