[metadata]
name = edx-lint
summary = edX-authored pylint checkers
description_file = README.rst
url = https://github.com/edx/edx-lint
author = edX
author_email = oscm@edx.org
license = Apache

classifiers =
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.5
    Topic :: Software Development :: Quality Assurance

[files]
packages =
    edx_lint
    edx_lint.cmd
    edx_lint.pylint

package-data =
    edx_lint =
        files/*

[entry_points]
console_scripts =
    edx_lint = edx_lint.cmd.main:main
    lint-amnesty = edx_lint.cmd.amnesty:pylint_amnesty
