[metadata]
name = edx-lint
version = attr: edx_lint.VERSION
summary = edX-authored pylint checkers
description_file = README.rst
url = https://github.com/edx/edx-lint
author = edX
author_email = oscm@edx.org
license = Apache

classifiers =
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.5
    Topic :: Software Development :: Quality Assurance

[options]
packages = find:
install_requires =
    pylint==1.9.5;python_version<"3.0"  # The last pylint version to support python 2
    pylint==2.4.2;python_version>="3.0"
    pylint-django==0.11.1;python_version<"3.0"  # The last pylint-django to support python 2
    pylint-django==2.0.11;python_version>="3.0"
    pylint-celery==0.3
    six>=1.10.0,<2.0.0
    click>=6.0
    click-log==0.3.2

[options.packages.find]
exclude=
    test

[options.package_data]
edx_lint = files/*

[options.entry_points]
console_scripts =
    edx_lint = edx_lint.cmd.main:main
    lint-amnesty = edx_lint.cmd.amnesty:pylint_amnesty
