[metadata]
name = edx-lint
version = attr: edx_lint.VERSION
summary = edX-authored pylint checkers
description_file = README.rst
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/openedx/edx-lint
author = edX
author_email = oscm@edx.org
license = Apache

classifiers =
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Quality Assurance

[options]
packages = find:

[options.packages.find]
exclude=
    test

[options.package_data]
edx_lint =
    files/*
    files/.*

[options.entry_points]
console_scripts =
    edx_lint = edx_lint.cmd.main:main
    lint-amnesty = edx_lint.cmd.amnesty:pylint_amnesty
